--- a/site/src/template.html
+++ b/site/src/template.html
@@ -11,6 +11,12 @@
 	<link rel='manifest' href='manifest.json'>
 	<link rel='icon' type='image/png' href='favicon.png'>
 
+	<style>
+		html, body {
+			background: #f5f5f5;
+		}
+	</style>
+
 	<!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
 	     lazily loaded when it precaches secondary pages -->
@@ -23,7 +29,7 @@
 <body>
 	<!-- The application will be rendered inside this element,
 	     because `app/client.js` references it -->
-	<div id='sapper'>%sapper.html%</div>
+	<div id='sapper' class="">%sapper.html%</div>
 
 	<!-- Sapper creates a <script> tag containing `app/client.js`
 	     and anything else it needs to hydrate the app and
