Moving to sapper! WIP

--- a/src/routes/_layout.html
+++ b/src/routes/_layout.html
@@ -3,7 +3,7 @@
 
 </svelte:head>
 
-<Nav segment={child.segment}/>
+<Nav segment={child.segment}></Nav>
 
 <main>
 	<svelte:component this={child.component} {...child.props}/>
