--- a/src/template.html
+++ b/src/template.html
@@ -31,16 +31,19 @@
      because `app/client.js` references it -->
 <div id="sapper" class="">%sapper.html%</div>
 
-<!-- Sapper creates a <script> tag containing `app/client.js`
-     and anything else it needs to hydrate the app and
-     initialise the router -->
-%sapper.scripts%
 
+<script src="/__/firebase/5.5.6/firebase-app.js"></script>
+<script src="/__/firebase/5.5.6/firebase-auth.js"></script>
+<script src="/__/firebase/init.js"></script>
 <script
         src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
 <script src="semantic.min.js"></script>
+<!-- Sapper creates a <script> tag containing `app/client.js`
+     and anything else it needs to hydrate the app and
+     initialise the router -->
+%sapper.scripts%
 
 </body>
 </html>
