--- a/src/template.html
+++ b/src/template.html
@@ -33,6 +33,8 @@
 
 
 <script src="/__/firebase/5.5.6/firebase-app.js"></script>
+<script src="/__/firebase/5.5.6/firebase-firestore.js"></script>
+<script src="/__/firebase/5.5.6/firebase-storage.js"></script>
 <script src="/__/firebase/5.5.6/firebase-auth.js"></script>
 <script src="/__/firebase/init.js"></script>
 <script
